fixing font size of highlighted text on mobile

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -315,7 +315,6 @@ hr {
 ::-moz-selection { background: $accent-color; color: $background-color; }
 
 mark {
-  font-size: $h5-small;
   font-weight: $h5-weight;
   line-height: $h5-lineheight;
   letter-spacing: $h5-spacing;
